# Media-Manager

./: Cargo.toml  README.adoc  README.md  data.json  result.md
src/: cli.rs  lib.rs  main.rs  musicfile.rs  scan.rs  search.rs  write2md.rs
